--- a/TKB.html
+++ b/TKB.html
@@ -15,8 +15,10 @@
 			<td class="block">Giáo viên: KhoaNV</td>
 			<td class="canphai">Ngày học: Thứ 3,5,7</td>
 		</tr>
+		<tr>
+			<td class="block">Phòng học: Class3/Lab3</td>
+		</tr>
 	</table>
-	<br>	
 	<table>
 		<tr>
 			<td colspan="3" border="0"></td>
@@ -53,15 +55,5 @@
 			<td>...</td>
 		</tr>
 	</table>
-	<audio controls>
-		<source src="E:\son\Music\1-Phut-Andiez.mp3" type="audio/mpeg">
-		<source src="E:\son\Music\A-Little-Love-Phung-Thuy-Hoa.mp3" type="audio/mpeg">
-	</audio>
-	<video width="400" height="400" controls>
-		<source src="https://www.youtube.com/embed/qaZ0oAh4evU" type="video/mp4">
-	</video>
-	<iframe src="http://codegymdanang.com/" width="500" height="400">
-		codegym.vn
-	</iframe>
 </body>
 </html>
